@@ -1,3 +1,4 @@
+* Compute ES VAT List and EC Operation List in company currency
 * Link recargo tax with its related VAT taxes
 * Add purchase service tax group
 
